--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,11 +5,20 @@
   font-style: normal;
 }
 
-body {
+html, body {
+  height: 100%;
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   background-color: #3A4E48;
   color: white;
   font-family: 'RussoOne', sans-serif;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensures the app takes up the full height of the viewport */
 }
 
 header {
@@ -18,6 +27,17 @@ header {
   padding: 15px;
   align-items: center;
   justify-content: space-between;
+  flex-shrink: 0; /* Prevents the header from shrinking */
+}
+
+.MainContent {
+  flex-grow: 1; /* Makes the main content fill the remaining space */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  overflow: auto; /* Ensures content is scrollable if it overflows */
 }
 
 .Button1 {
@@ -30,6 +50,14 @@ header {
   font-size: 1em;
   font-family: 'RussoOne', sans-serif;
   text-decoration: none;
+  transition: background-color 0.3s ease;
+  transition: color 0.3s ease;
+  border-radius: 5px;
+}
+
+.Button1:hover {
+  background-color: #F4C95D;
+  color: #3A4E48;
 }
 
 .error {
