--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -7,18 +7,6 @@
     background-color: #3A4E48;
     color: white;
     font-family: 'RussoOne', sans-serif;
-    padding: 20px;
-  }
-  
-  /* Profile card styling */
-  .profile-card {
-    background-color: #2C3E3B;
-    border-radius: 10px;
-    padding: 30px;
-    width: 100%;
-    max-width: 500px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    text-align: center;
   }
   
   /* Title styling */
@@ -31,10 +19,25 @@
   /* Profile details styling */
   .profile-details p {
     font-size: 1.2rem;
-    margin: 10px 0;
+    margin: 10px 30px;
     line-height: 1.5;
   }
   
   .profile-details strong {
     color: #F4C95D;
   }
+
+  .logout-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    background-color: #F44336;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+}
+
+.logout-button:hover {
+    background-color: #D32F2F;
+}
